"""initial schema

Revision ID: 761cbf561ca3
Revises: 
Create Date: 2025-12-06 01:33:46.352370

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '761cbf561ca3'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('card',
    sa.Column('card_id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('card_name', sa.String(), nullable=True),
    sa.Column('card_benefit', sa.String(), nullable=True),
    sa.Column('card_pre_month_money', sa.Integer(), nullable=True),
    sa.PrimaryKeyConstraint('card_id')
    )
    op.create_table('user',
    sa.Column('user_id', sa.String(), nullable=False),
    sa.Column('user_name', sa.String(), nullable=True),
    sa.Column('user_email', sa.String(), nullable=True),
    sa.Column('user_pw', sa.LargeBinary(1137), nullable=True),
    sa.Column('user_age', sa.Integer(), nullable=True),
    sa.Column('user_phone', sa.String(), nullable=True),
    sa.Column('monthly_spending', sa.Integer(), nullable=True),
    sa.Column('monthly_savings', sa.Integer(), nullable=True),
    sa.Column('isBusiness', sa.Boolean(), nullable=True),
    sa.PrimaryKeyConstraint('user_id'),
    sa.UniqueConstraint('user_email')
    )
    op.create_table('card_benefit',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('card_name', sa.String(), nullable=True),
    sa.Column('category', sa.String(), nullable=True),
    sa.Column('places', sa.String(), nullable=True),
    sa.Column('discount_type', sa.String(), nullable=True),
    sa.Column('discount_value', sa.Integer(), nullable=True),
    sa.Column('max_discount', sa.Integer(), nullable=True),
    sa.Column('pre_month_config', sa.String(), nullable=True),
    sa.Column('limit_config', sa.String(), nullable=True),
    sa.Column('places_display', sa.String(), nullable=True),
    sa.Column('discount_display', sa.String(), nullable=True),
    sa.Column('limit_display', sa.String(), nullable=True),
    sa.Column('max_discount_display', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['card_name'], ['card.card_name'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('corporate_card',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('card_name', sa.String(), nullable=False),
    sa.Column('card_number', sa.String(), nullable=True),
    sa.Column('card_company', sa.String(), nullable=True),
    sa.Column('owner_user_id', sa.String(), nullable=False),
    sa.Column('monthly_limit', sa.Integer(), nullable=True),
    sa.Column('used_amount', sa.Integer(), nullable=True),
    sa.Column('benefit_summary', sa.Text(), nullable=True),
    sa.Column('benefits_json', sa.Text(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['owner_user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('friendship',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.String(), nullable=False),
    sa.Column('friend_id', sa.String(), nullable=False),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['friend_id'], ['user.user_id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('mycard',
    sa.Column('cid', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('mycard_name', sa.String(), nullable=True),
    sa.Column('mycard_detail', sa.String(), nullable=True),
    sa.Column('mycard_pre_month_money', sa.Integer(), nullable=True),
    sa.Column('mycard_pre_YN', sa.Boolean(), nullable=True),
    sa.Column('monthly_limit', sa.Integer(), nullable=True),
    sa.Column('used_amount', sa.Integer(), nullable=True),
    sa.Column('monthly_performance', sa.Integer(), nullable=True),
    sa.Column('daily_count', sa.Integer(), nullable=True),
    sa.Column('monthly_count', sa.Integer(), nullable=True),
    sa.Column('last_used_date', sa.Date(), nullable=True),
    sa.Column('reset_date', sa.Date(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('cid')
    )
    op.create_table('notification',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.String(), nullable=False),
    sa.Column('type', sa.String(), nullable=False),
    sa.Column('title', sa.String(), nullable=False),
    sa.Column('message', sa.Text(), nullable=False),
    sa.Column('data', sa.Text(), nullable=True),
    sa.Column('is_read', sa.Boolean(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('saved_course',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('title', sa.String(), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('stops', sa.Text(), nullable=True),
    sa.Column('route_info', sa.Text(), nullable=True),
    sa.Column('total_distance', sa.Integer(), nullable=True),
    sa.Column('total_duration', sa.Integer(), nullable=True),
    sa.Column('total_benefit_score', sa.Integer(), nullable=True),
    sa.Column('num_people', sa.Integer(), nullable=True),
    sa.Column('budget', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('save_count', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('department',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('corporate_card_id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('monthly_limit', sa.Integer(), nullable=True),
    sa.Column('used_amount', sa.Integer(), nullable=True),
    sa.Column('color', sa.String(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['corporate_card_id'], ['corporate_card.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('payment_history',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('transaction_id', sa.String(length=36), nullable=False),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('card_id', sa.Integer(), nullable=True),
    sa.Column('merchant_name', sa.String(), nullable=True),
    sa.Column('payment_amount', sa.Integer(), nullable=True),
    sa.Column('discount_amount', sa.Integer(), nullable=True),
    sa.Column('final_amount', sa.Integer(), nullable=True),
    sa.Column('benefit_text', sa.Text(), nullable=True),
    sa.Column('payment_date', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['card_id'], ['mycard.cid'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('transaction_id')
    )
    op.create_table('qr_scan_status',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('card_id', sa.Integer(), nullable=True),
    sa.Column('timestamp', sa.Integer(), nullable=False),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('merchant_name', sa.String(), nullable=True),
    sa.Column('scanned_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['card_id'], ['mycard.cid'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('saved_course_user',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('course_id', sa.Integer(), nullable=True),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('saved_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['course_id'], ['saved_course.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('shared_course',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('course_id', sa.Integer(), nullable=False),
    sa.Column('shared_by', sa.String(), nullable=False),
    sa.Column('shared_to', sa.String(), nullable=False),
    sa.Column('shared_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['course_id'], ['saved_course.id'], ),
    sa.ForeignKeyConstraint(['shared_by'], ['user.user_id'], ),
    sa.ForeignKeyConstraint(['shared_to'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('corporate_card_member',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('corporate_card_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('invited_email', sa.String(), nullable=False),
    sa.Column('department_id', sa.Integer(), nullable=True),
    sa.Column('role', sa.String(), nullable=True),
    sa.Column('monthly_limit', sa.Integer(), nullable=True),
    sa.Column('used_amount', sa.Integer(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('invited_at', sa.DateTime(), nullable=True),
    sa.Column('joined_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['corporate_card_id'], ['corporate_card.id'], ),
    sa.ForeignKeyConstraint(['department_id'], ['department.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('corporate_payment_history',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('transaction_id', sa.String(length=36), nullable=False),
    sa.Column('corporate_card_id', sa.Integer(), nullable=False),
    sa.Column('member_id', sa.Integer(), nullable=True),
    sa.Column('user_id', sa.String(), nullable=True),
    sa.Column('merchant_name', sa.String(), nullable=True),
    sa.Column('merchant_category', sa.String(), nullable=True),
    sa.Column('payment_amount', sa.Integer(), nullable=True),
    sa.Column('discount_amount', sa.Integer(), nullable=True),
    sa.Column('final_amount', sa.Integer(), nullable=True),
    sa.Column('benefit_text', sa.Text(), nullable=True),
    sa.Column('receipt_image', sa.Text(), nullable=True),
    sa.Column('receipt_ocr_data', sa.Text(), nullable=True),
    sa.Column('payment_date', sa.DateTime(), nullable=True),
    sa.Column('synced_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['corporate_card_id'], ['corporate_card.id'], ),
    sa.ForeignKeyConstraint(['member_id'], ['corporate_card_member.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.user_id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('transaction_id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('corporate_payment_history')
    op.drop_table('corporate_card_member')
    op.drop_table('shared_course')
    op.drop_table('saved_course_user')
    op.drop_table('qr_scan_status')
    op.drop_table('payment_history')
    op.drop_table('department')
    op.drop_table('saved_course')
    op.drop_table('notification')
    op.drop_table('mycard')
    op.drop_table('friendship')
    op.drop_table('corporate_card')
    op.drop_table('card_benefit')
    op.drop_table('user')
    op.drop_table('card')
    # ### end Alembic commands ###
