// Cardealo ERD - dbdiagram.io
// Generated: 2025-12-08
// Total Tables: User Backend (17) + Admin Backend (3)

// ============================================================
// USER BACKEND DATABASE (PostgreSQL)
// ============================================================

// --- User Domain ---

Table user {
  user_id varchar [pk, note: '사용자 고유 ID']
  user_name varchar [note: '사용자 이름']
  user_email varchar [unique, not null, note: '이메일 (로그인용)']
  user_pw varchar [not null, note: '비밀번호 (pbkdf2_sha512 해시)']
  user_age integer [note: '나이']
  user_phone varchar [note: '전화번호']
  monthly_spending integer [default: 0, note: '월 소비 금액']
  monthly_savings integer [default: 0, note: '월 절감 금액']
  isBusiness boolean [default: false, note: '비즈니스 계정 여부']
  balance integer [default: 0, note: 'OnePay 잔액 (원)']
}

Table mycard {
  cid integer [pk, increment, note: '보유카드 ID']
  user_id varchar [ref: > user.user_id, note: '사용자 ID']
  mycard_name varchar [note: '카드명']
  mycard_detail varchar [note: '카드 혜택 상세']
  mycard_pre_month_money integer [note: '전월실적 요건']
  mycard_pre_YN boolean [default: false, note: '전월실적 달성 여부']
  monthly_limit integer [default: 0, note: '월 한도 (원)']
  used_amount integer [default: 0, note: '사용 금액 (원)']
  monthly_performance integer [default: 0, note: '월 실적 (원)']
  daily_count integer [default: 0, note: '일 사용 횟수']
  monthly_count integer [default: 0, note: '월 사용 횟수']
  last_used_date date [note: '마지막 사용 날짜']
  reset_date date [note: '한도 리셋 날짜']
}

// --- Card Master Data ---

Table card {
  card_id integer [pk, increment, note: '카드 마스터 ID']
  card_name varchar [note: '카드명']
  card_benefit varchar [note: '카드 혜택 요약']
  card_pre_month_money integer [note: '전월실적 요건']
}

Table card_benefit {
  id integer [pk, increment, note: '혜택 ID']
  card_name varchar [ref: > card.card_name, note: '카드명']
  category varchar [note: '카테고리 (convenience, mart, cafe 등)']
  places varchar [note: 'JSON: 가맹점 목록 ["CU", "GS25"]']
  discount_type varchar [note: '할인 유형 (percent, amount, point, per_unit)']
  discount_value integer [note: '할인 값 (10=10%, 1000=1000원)']
  max_discount integer [note: '최대 할인 금액']
  pre_month_config varchar [note: 'JSON: 전월실적 티어 정보']
  limit_config varchar [note: 'JSON: 사용 제한 조건']
  places_display varchar [note: '표시용: 가맹점']
  discount_display varchar [note: '표시용: 할인']
  limit_display varchar [note: '표시용: 한도']
  max_discount_display varchar [note: '표시용: 최대 할인']
}

// --- Course Domain ---

Table saved_course {
  id integer [pk, increment, note: '코스 ID']
  user_id varchar [ref: > user.user_id, note: '생성자 ID']
  title varchar [not null, note: '코스 제목']
  description text [note: '코스 설명']
  stops text [note: 'JSON: 코스 장소 목록']
  route_info text [note: 'JSON: 경로 정보']
  total_distance integer [note: '총 거리 (m)']
  total_duration integer [note: '총 소요 시간 (분)']
  total_benefit_score integer [note: '총 혜택 점수']
  num_people integer [default: 2, note: '인원']
  budget integer [default: 100000, note: '예산']
  created_at datetime [default: `now()`, note: '생성일']
  save_count integer [default: 0, note: '저장 횟수 (인기도)']
}

Table saved_course_user {
  id integer [pk, increment, note: '저장 ID']
  course_id integer [ref: > saved_course.id, note: '코스 ID']
  user_id varchar [ref: > user.user_id, note: '저장한 사용자 ID']
  saved_at datetime [default: `now()`, note: '저장일']

  indexes {
    (course_id, user_id) [unique]
  }
}

Table shared_course {
  id integer [pk, increment, note: '공유 ID']
  course_id integer [ref: > saved_course.id, not null, note: '코스 ID']
  shared_by varchar [ref: > user.user_id, not null, note: '공유한 사용자']
  shared_to varchar [ref: > user.user_id, not null, note: '공유받은 사용자']
  shared_at datetime [default: `now()`, note: '공유일']
}

// --- Social Domain ---

Table friendship {
  id integer [pk, increment, note: '친구관계 ID']
  user_id varchar [ref: > user.user_id, not null, note: '요청한 사용자']
  friend_id varchar [ref: > user.user_id, not null, note: '요청받은 사용자']
  status varchar [default: 'pending', note: 'pending, accepted, rejected, blocked']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']

  indexes {
    (user_id, friend_id) [unique]
  }
}

Table conversation {
  id integer [pk, increment, note: '대화방 ID']
  user1_id varchar [ref: > user.user_id, not null, note: '사용자1']
  user2_id varchar [ref: > user.user_id, not null, note: '사용자2']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']

  indexes {
    (user1_id, user2_id) [unique]
  }
}

Table message {
  id integer [pk, increment, note: '메시지 ID']
  conversation_id integer [ref: > conversation.id, not null, note: '대화방 ID']
  sender_id varchar [ref: > user.user_id, not null, note: '발신자']
  content text [not null, note: '메시지 내용']
  is_read boolean [default: false, note: '읽음 여부']
  created_at datetime [default: `now()`, note: '전송일']
}

Table notification {
  id integer [pk, increment, note: '알림 ID']
  user_id varchar [ref: > user.user_id, not null, note: '수신자']
  type varchar [not null, note: 'payment, benefit_tip, friend_request, friend_accepted, course_shared, system']
  title varchar [not null, note: '알림 제목']
  message text [not null, note: '알림 내용']
  data text [note: 'JSON: 추가 데이터']
  is_read boolean [default: false, note: '읽음 여부']
  created_at datetime [default: `now()`, note: '생성일']
}

// --- Payment Domain ---

Table payment_history {
  id integer [pk, increment, note: '결제 ID']
  transaction_id varchar(36) [unique, not null, note: '거래 고유 ID']
  user_id varchar [ref: > user.user_id, note: '결제자']
  card_id integer [ref: > mycard.cid, note: '결제 카드']
  merchant_name varchar [note: '가맹점명']
  payment_amount integer [note: '결제 금액']
  discount_amount integer [note: '할인 금액']
  final_amount integer [note: '최종 금액']
  benefit_text text [note: '혜택 설명']
  payment_date datetime [default: `now()`, note: '결제일']
}

Table qr_scan_status {
  id integer [pk, increment, note: 'QR 상태 ID']
  user_id varchar [ref: > user.user_id, note: '사용자']
  card_id integer [ref: > mycard.cid, note: '카드']
  timestamp integer [not null, note: 'QR 생성 시간 (Unix)']
  status varchar [default: 'waiting', note: 'waiting, scanned, processing, completed, failed, cancelled']
  merchant_name varchar [note: '가맹점명']
  scanned_at datetime [note: '스캔 시간']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']
}

// --- Corporate Card Domain ---

Table corporate_card {
  id integer [pk, increment, note: '법인카드 ID']
  card_name varchar [not null, note: '법인카드명']
  card_number varchar [note: '마스킹된 카드번호']
  card_company varchar [note: '카드사']
  owner_user_id varchar [ref: > user.user_id, not null, note: '소유자 (관리자)']
  monthly_limit integer [default: 10000000, note: '월 한도']
  used_amount integer [default: 0, note: '사용 금액']
  benefit_summary text [note: '혜택 요약']
  benefits_json text [note: 'JSON: 혜택 상세']
  is_active boolean [default: true, note: '활성 상태']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']
}

Table department {
  id integer [pk, increment, note: '부서 ID']
  corporate_card_id integer [ref: > corporate_card.id, not null, note: '법인카드 ID']
  name varchar [not null, note: '부서명']
  monthly_limit integer [default: 2000000, note: '부서 월 한도']
  used_amount integer [default: 0, note: '사용 금액']
  color varchar [default: '#4AA63C', note: 'UI 표시용 색상']
  created_at datetime [default: `now()`, note: '생성일']
}

Table corporate_card_member {
  id integer [pk, increment, note: '멤버 ID']
  corporate_card_id integer [ref: > corporate_card.id, not null, note: '법인카드 ID']
  user_id varchar [ref: > user.user_id, note: '연결된 사용자']
  invited_email varchar [not null, note: '초대된 이메일']
  department_id integer [ref: > department.id, note: '소속 부서']
  role varchar [default: 'member', note: 'admin, manager, member']
  monthly_limit integer [default: 500000, note: '개인 월 한도']
  used_amount integer [default: 0, note: '사용 금액']
  status varchar [default: 'pending', note: 'pending, active, inactive']
  invited_at datetime [default: `now()`, note: '초대일']
  joined_at datetime [note: '가입일']
}

Table corporate_payment_history {
  id integer [pk, increment, note: '결제 ID']
  transaction_id varchar(36) [unique, not null, note: '거래 ID']
  corporate_card_id integer [ref: > corporate_card.id, not null, note: '법인카드 ID']
  member_id integer [ref: > corporate_card_member.id, note: '결제 멤버']
  user_id varchar [ref: > user.user_id, note: '결제 사용자']
  merchant_name varchar [note: '가맹점명']
  merchant_category varchar [note: '가맹점 카테고리']
  payment_amount integer [note: '결제 금액']
  discount_amount integer [default: 0, note: '할인 금액']
  final_amount integer [note: '최종 금액']
  benefit_text text [note: '혜택 설명']
  receipt_image text [note: '영수증 이미지 (base64/URL)']
  receipt_ocr_data text [note: 'JSON: OCR 추출 데이터']
  payment_date datetime [default: `now()`, note: '결제일']
  synced_at datetime [note: '동기화 시간']
}

// --- Cache ---

Table route_cache {
  id integer [pk, increment, note: '캐시 ID']
  cache_key varchar [unique, not null, note: '캐시 키']
  origin_lat varchar [not null, note: '출발지 위도']
  origin_lng varchar [not null, note: '출발지 경도']
  dest_lat varchar [not null, note: '도착지 위도']
  dest_lng varchar [not null, note: '도착지 경도']
  mode varchar [not null, note: 'walking, driving, transit']
  response_data text [not null, note: 'JSON: 경로 응답 데이터']
  created_at datetime [default: `now()`, note: '생성일']
  hit_count integer [default: 0, note: '캐시 적중 횟수']
  last_hit_at datetime [note: '마지막 적중 시간']

  indexes {
    cache_key
  }
}

// ============================================================
// ADMIN BACKEND DATABASE (SQLite)
// ============================================================

Table admin_merchants {
  id integer [pk, increment, note: '가맹점 ID']
  place_id varchar(255) [unique, not null, note: 'Google Place ID']
  name varchar(255) [not null, note: '가맹점명']
  category varchar(100) [note: '카테고리']
  address varchar(500) [note: '주소']
  latitude decimal(10,8) [note: '위도']
  longitude decimal(11,8) [note: '경도']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']

  indexes {
    place_id
  }
}

Table admin_card_benefits {
  id integer [pk, increment, note: '혜택 ID']
  card_name varchar(255) [not null, note: '카드명']
  category varchar(100) [note: '카테고리']
  places json [note: '가맹점 목록']
  discount_type varchar(50) [note: '할인 유형']
  discount_value integer [note: '할인 값']
  max_discount integer [note: '최대 할인']
  pre_month_config json [note: '전월실적 설정']
  limit_config json [note: '한도 설정']
  places_display text [note: '표시용: 가맹점']
  discount_display text [note: '표시용: 할인']
  limit_display text [note: '표시용: 한도']
  max_discount_display text [note: '표시용: 최대 할인']
  created_at datetime [default: `now()`, note: '생성일']
  updated_at datetime [default: `now()`, note: '수정일']

  indexes {
    card_name
    category
  }
}

Table admin_payment_transactions {
  id integer [pk, increment, note: '트랜잭션 ID']
  transaction_id varchar(36) [unique, not null, note: '거래 고유 ID']
  merchant_id integer [ref: > admin_merchants.id, note: '가맹점 ID']
  user_id varchar(255) [not null, note: '사용자 ID']
  user_name varchar(255) [note: '사용자명']
  card_name varchar(255) [not null, note: '카드명']
  card_id integer [note: '카드 ID']
  payment_amount integer [not null, note: '결제 금액']
  discount_amount integer [default: 0, note: '할인 금액']
  discount_type varchar(50) [note: '할인 유형']
  final_amount integer [not null, note: '최종 금액']
  benefit_text text [note: '혜택 설명']
  payment_status varchar(20) [default: 'pending', note: 'pending, completed, failed']
  payment_method varchar(50) [note: 'qr_code, barcode']
  qr_data text [note: 'QR 데이터']
  created_at datetime [default: `now()`, note: '생성일']
  completed_at datetime [note: '완료일']

  indexes {
    transaction_id
    merchant_id
    user_id
    created_at
  }
}

// ============================================================
// Table Groups
// ============================================================

TableGroup user_domain {
  user
  mycard
}

TableGroup card_master {
  card
  card_benefit
}

TableGroup course_domain {
  saved_course
  saved_course_user
  shared_course
}

TableGroup social_domain {
  friendship
  conversation
  message
  notification
}

TableGroup payment_domain {
  payment_history
  qr_scan_status
}

TableGroup corporate_domain {
  corporate_card
  department
  corporate_card_member
  corporate_payment_history
}

TableGroup admin_system {
  admin_merchants
  admin_card_benefits
  admin_payment_transactions
}
